--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,14 +69,14 @@ layout: base
         <li class="page-item previous">
           <a class="page-link" href="{{ page.previous.url | relative_url }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title | strip_html | xml_escape}}">
             <i class="fas fa-arrow-left" alt="Previous Post"></i>
-            <span class="d-none d-sm-inline-block">Previous Post</span>
+            <span class="d-none d-sm-inline-block">上一篇</span>
           </a>
         </li>
         {% endif %}
         {% if page.next.url %}
         <li class="page-item next">
           <a class="page-link" href="{{ page.next.url | relative_url }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title | strip_html | xml_escape}}">
-            <span class="d-none d-sm-inline-block">Next Post</span>
+            <span class="d-none d-sm-inline-block">下一篇</span>
             <i class="fas fa-arrow-right" alt="Next Post"></i>
           </a>
         </li>
